--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	</head>
 
 
-	<body>
+	<body bgcolor="#0099CC">
 
 		<h1 align="center"> Hello every body ! </h1>
+		<h3 align="center"> Présentation de l'outil Git </h3>
 		
 		
 	</body>
